[package]
name = "adnl"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { version = "0.7", features = ["ctr"] }
bytes = "1.1"
curve25519-dalek-ng = "4.1"
dashmap = "5.0"
futures = "0.3"
generic-array = { version = "0.14", features = ["more_lengths"] }
hex = "0.4"
libc = "0.2"
log = "0.4.14"
rand = "0.8"
rustc-hash = "1.1"
sha2 = "0.9"
smallvec = "1.8"
thiserror = "1.0"
tl-proto = { version = "0.1", features = ["derive"] }
tokio = { version = "1", features = ["sync", "net", "rt", "time", "io-util", "macros"] }
