[package]
name = "adnl"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { version = "0.8.0" }
bytes = "1.1"
ctr = "0.9.0"
dashmap = "5.1.0"
futures = "0.3"
generic-array = { version = "0.14", features = ["more_lengths"] }
hex = "0.4"
libc = "0.2"
log = "0.4.14"
parking_lot = "0.12.0"
rand = "0.8"
rustc-hash = "1.1"
sha2 = "0.9"
smallvec = { version = "1.8", features = ["const_generics", "union"] }
thiserror = "1.0"
tl-proto = { version = "0.1", features = ["derive"] }
tokio = { version = "1", features = ["sync", "net", "rt", "time", "io-util", "macros", "parking_lot"] }

everscale-crypto = "0.0.1"

[dev-dependencies]
criterion = "0.3"
